--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: MAMC Anaesthesia Update
 
 # Short bio or description (displayed in the header)
-description: P.G. Refresher Course (28th August - 1st September 2019)
+description: P.G. Refresher Course (1st Feburary - 5th Feburary 2022)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://upload.wikimedia.org/wikipedia/en/8/83/LogoOfMAMC.jpg
+avatar: https://upload.wikimedia.org/wikipedia/en/4/43/Maulana_Azad_Medical_College_logo.svg
 
 #
 # Flags below are optional
