--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   name             : "MAMC Anaesthesia Update"
   avatar           : "/assets/images/profile.png"
   bio              : "P.G. Refresher Course (31st January - 3rd Feburary 2023)"
-  location         : "Delhi, IN"
+  location         : "MAMC Auditorium"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
