--- a/_config.yml
+++ b/_config.yml
@@ -87,9 +87,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : true # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
+    tracking_id          : UA-118818485-1
     anonymize_ip         : # true, false (default)
 
 
@@ -282,4 +282,6 @@ defaults:
       toc: false
       layout: single
       author_profile: true
+      classes: wide
+
 
