--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ analytics:
 author:
   name             : "MAMC Anaesthesia Update"
   avatar           : "/assets/images/profile.png"
-  bio              : "P.G. Refresher Course (31st January - 3rd Feburary 2023)"
+  bio              : "P.G. Refresher Course (15th October - 19th October 2024)"
   location         : "MAMC Auditorium"
   links:
     - label: "Email"
